[package]
name = "redis_testing"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "redis_testing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.23.0"
dotenv = "0.15.0"
geohash = "0.13.0"
tokio = {version = "1.28.2", features = ["macros", "rt-multi-thread"]}
rand = "0.8.5"
goto = "0.1.2"